@@ -1059,12 +1059,38 @@ verilog/example.v:110: OPERATOR ';'
 verilog/example.v:111: unreadback '
    '
 verilog/example.v:111: KEYWORD 'end'
-verilog/example.v:113: unreadback '
+verilog/example.v:115: unreadback '
+
+   
+   
+   '
+verilog/example.v:115: SYMBOL 'never_will_occur'
+verilog/example.v:115: OPERATOR ':'
+verilog/example.v:115: unreadback ' '
+verilog/example.v:115: KEYWORD 'cover'
+verilog/example.v:115: unreadback ' '
+verilog/example.v:115: KEYWORD 'property'
+verilog/example.v:115: unreadback ' '
+verilog/example.v:115: OPERATOR '('
+verilog/example.v:115: OPERATOR '@'
+verilog/example.v:115: OPERATOR '('
+verilog/example.v:115: KEYWORD 'posedge'
+verilog/example.v:115: unreadback ' '
+verilog/example.v:115: SYMBOL 'clk'
+verilog/example.v:115: OPERATOR ')'
+verilog/example.v:115: unreadback ' '
+verilog/example.v:115: OPERATOR '('
+verilog/example.v:115: NUMBER '1'b0'
+verilog/example.v:115: OPERATOR ')'
+verilog/example.v:115: OPERATOR ')'
+verilog/example.v:115: OPERATOR ';'
+verilog/example.v:118: unreadback '
+   
 
 '
-verilog/example.v:113: KEYWORD 'endmodule'
-verilog/example.v:114: unreadback '
+verilog/example.v:118: KEYWORD 'endmodule'
+verilog/example.v:119: unreadback '
 '
-verilog/example.v:114: PREPROC '`line 114 "verilog/example.v" 2
+verilog/example.v:119: PREPROC '`line 119 "verilog/example.v" 2
 '
-verilog/example.v:114: ENDPARSE ''
+verilog/example.v:119: ENDPARSE ''
